--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1 class="title">Hello world</h1>
+    <p class="title">Hello world</p>
 </body>
 </html>
